Fix z-index and title bug in node tooltip

--- a/web_client/css/neural-network-viz.css
+++ b/web_client/css/neural-network-viz.css
@@ -24,4 +24,5 @@
   font-size: 90%;
   cursor: auto;
   overflow-y: scroll;
+  z-index: 3;
 }
